Corrected e-mail invitation messages

--- a/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
+++ b/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
@@ -34,10 +34,10 @@ userMention.text1=You have been mentionned on Tatami :
 userMention.text2=You can see this status on Tatami :
 userMention.text3=Regards,
 
-invitationMessage.title=One of your knowledge has invited you to Tatami
-invitationMessage.greeting=Hello
-invitationMessage.text1=wants to share with you Tatami exprérience.
-invitationMessage.text2=Register on
+invitationMessage.title=One of your co-workers has invited you to Tatami
+invitationMessage.greeting=Hi,
+invitationMessage.text1=has invited you to Tatami, your enterprise social network.
+invitationMessage.text2=You can register on:
 invitationMessage.text3=Regards,
 
 dailyDigest.title=Tatami - Daily digest
