--- a/src/main/resources/META-INF/tatami/mails/messages/messages_fr.properties
+++ b/src/main/resources/META-INF/tatami/mails/messages/messages_fr.properties
@@ -34,10 +34,10 @@ userMention.text1=Vous avez été mentionné sur Tatami :
 userMention.text2=Pour voir ce message sur Tatami :
 userMention.text3=Cordialement,
 
-invitationMessage.title=Un de vos connaissance vous a invité sur Tatami
+invitationMessage.title=Un de vos collègues vous a invité sur Tatami
 invitationMessage.greeting=Bonjour
-invitationMessage.text1=veut partager son expérience Tatami avec vous.
-invitationMessage.text2=Pour s'enregistrer :
+invitationMessage.text1=vous a invité sur Tatami, votre réseau social d'entreprise.
+invitationMessage.text2=Pour vous enregistrer, cliquez ici :
 invitationMessage.text3=Cordialement,
 
 dailyDigest.title=Tatami - Résumé quotidien de votre actualité
