Re-designed help system

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -278,6 +278,9 @@ tatami.help.end=End
 tatami.help.next=Next &raquo;
 tatami.help.previous=&laquo; Prev
 
+tatami.help.home.presentation.title=<b>Help</b>
+tatami.help.home.presentation.content=Welcome to the online help!<br/>Follow the next steps for a tour of the main Tatami features.
+
 tatami.help.home.timeline.title=<b>Timeline</b>
 tatami.help.home.timeline.content=This is your timeline. It displays all messages \
   <ul>\
