--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -279,7 +279,7 @@ tatami.help.next=Suivant &raquo;
 tatami.help.previous=&laquo; Précédent
 
 tatami.help.home.presentation.title=<b>Aide</b>
-tatami.help.home.presentation.content=Bienvenue dans l'aide !<br/>Nous allons vous guider à travers les principales fonctionnalités de Tatami.
+tatami.help.home.presentation.content=Bienvenue dans l'aide !<br/><p>Nous allons vous guider à travers les principales fonctionnalités de Tatami.</p>
 
 tatami.help.home.timeline.title=<b>Actualité</b>
 tatami.help.home.timeline.content=Cette zone représente votre actualité. Elle contient tous les messages\
