--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -252,7 +252,7 @@ tatami.presentation.row5.title=Need more information on our product?
 tatami.presentation.row5.1=Our sales team is looking forward to hearing from you! Call us at +33 01 46 12 48 48 or e-mail us at
 
 tatami.account.users.myfriends=My friends
-tatami.account.users.popular=Recommended
+tatami.account.users.recommended=Recommended
 tatami.account.users.all=Users
 tatami.account.groups.mygroups=My groups
 tatami.account.groups.recommended=Recommended
