Issue #396: fix typo, "accés" should be "accès".

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -186,11 +186,11 @@ tatami.group.add=Créer un nouveau groupe
 tatami.group.add.success=Groupe créé avec succès
 tatami.group.add.title=Nom du groupe
 tatami.group.add.description=Description
-tatami.group.add.access=Accés
+tatami.group.add.access=Accès
 tatami.group.add.public=Public
 tatami.group.add.private=Privé
 tatami.group.add.archived=Archivé
-tatami.group.add.public.alert=Attention! Si ce groupe est public, tout le monde y aura accés
+tatami.group.add.public.alert=Attention! Si ce groupe est public, tout le monde y aura accès
 tatami.group.add.success=Groupe créé avec succés
 tatami.group.archive=Voulez-vous archiver ce groupe ?
 tatami.group.archive.true=Oui, ce groupe doit être archivé
