issue #377, send 404 error for deleted files

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -24,6 +24,7 @@ tatami.username=User name
 tatami.password=Password
 tatami.404=Page not found.
 tatami.500=An error has occurred.
+tatami.file.not.found=The requested file does not exist. It was probably deleted by its owner.
 tatami.form.success=The form has been successfully saved.
 tatami.form.error=Failed to saved form.
 
