--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -215,6 +215,7 @@ tatami.group.role=Role
 tatami.group.role.admin=Administrator
 tatami.group.role.member=Member
 tatami.group.select=Select a group on the "Groups" menu on the left
+tatami.group.members.list=Members list
 
 tatami.presentation.title=What is Tatami?
 
