--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -216,6 +216,7 @@ tatami.group.role=Role
 tatami.group.role.admin=Administrateur
 tatami.group.role.member=Membre
 tatami.group.select=Sélectionnez un groupe dans le menu "Groupes" à gauche
+tatami.group.members.list=Liste des members
 
 tatami.presentation.title=Qu'est-ce que Tatami ?
 
