--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -277,7 +277,7 @@ tatami.welcome.friends.header.description=Veuillez entrer les adresses professio
 tatami.welcome.friends.body.emails=Adresses e-mails
 tatami.welcome.friends.error.400=Le domaine n'est pas autorisé.
 tatami.welcome.friends.error.404=Aucune valeur valable.
-tatami.welcome.friends.error.unknown=Un error s'est produite.
+tatami.welcome.friends.error.unknown=Une error s'est produite.
 
 tatami.help=Aide
 tatami.help.end=Terminer
