--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -1,6 +1,7 @@
 tatami.copyright=Copyright 2012
 tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Fork Tatami on Github
+tatami.github.issues=Submit a bug
 tatami.ippon.technologies=Ippon Technologies
 tatami.ippon.website=Ippon Technologies Website
 tatami.ippon.blog=Ippon Technologies Blog
