--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -1,6 +1,7 @@
 tatami.copyright=Copyright 2012
 tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Forker Tatami sur Github
+tatami.github.issues=Signaler un bug
 tatami.ippon.website=Site Web d'Ippon Technologies
 tatami.ippon.blog=Blog d'Ippon Technologies
 tatami.ippon.twitter.follow=Suivre @ippontech sur Twitter
