Company wall feature. Close #333

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -131,6 +131,7 @@ tatami.menu.files=Files
 tatami.menu.directory=Users
 tatami.menu.tags=Tags
 tatami.menu.status.of.the.day=Statuses of the day
+tatami.menu.company.wall=Company wall
 tatami.menu.preferences=Preferences
 tatami.menu.groups.directory=Groups directory
 
