--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -131,6 +131,7 @@ tatami.menu.files=Fichiers
 tatami.menu.directory=Utilisateurs
 tatami.menu.tags=Tags
 tatami.menu.status.of.the.day=Statuts du jour
+tatami.menu.company.wall=Mur de l'entreprise
 tatami.menu.preferences=Préférences
 tatami.menu.groups.directory=Annuaire des groupes
 
