Updated following/followers display

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -104,10 +104,10 @@ tatami.user.lastName=Nom
 tatami.user.jobTitle=Fonction
 tatami.user.phoneNumber=Numéro de téléphone
 tatami.user.follow=Suivre
-tatami.user.followed=Suivi
+tatami.user.followed=Abonné
 tatami.user.follows.you=vous suit
 tatami.badge.status=Statuts
-tatami.badge.followed=Suivis
+tatami.badge.followed=Abonnements
 tatami.badge.followers=Abonnés
 tatami.user.undefined=Utilisateur inconnu.
 tatami.user.yourself=C'est vous !
