Store and resize avatar #424

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -98,6 +98,7 @@ tatami.timeline=Timeline
 
 tatami.user.picture=Picture
 tatami.user.picture.legend=To update your picture, go to
+tatami.user.picture.button=Change your photo
 tatami.user.email=E-mail
 tatami.user.firstName=First name
 tatami.user.lastName=Last name
