--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -1,4 +1,5 @@
 tatami.copyright=Copyright 2012
+tatami.copyright=Copyright 2012
 tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Forker Tatami sur Github
 tatami.github.issues=Signaler un bug
@@ -98,6 +99,7 @@ tatami.timeline=Actualité
 
 tatami.user.picture=Photo
 tatami.user.picture.legend=Pour mettre à jour votre photo, connectez-vous sur
+tatami.user.picture.button=Changer votre photo
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
