--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -2,7 +2,6 @@ tatami.copyright=Copyright 2012
 tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Fork Tatami on Github
 tatami.github.issues=Submit a bug
-tatami.ippon.technologies=Ippon Technologies
 tatami.ippon.website=Ippon Technologies Website
 tatami.ippon.blog=Ippon Technologies Blog
 tatami.ippon.twitter.follow=Follow @ippontech on Twitter
@@ -96,8 +95,7 @@ tatami.status.help.title=Help
 tatami.status.help=<ul><li>You can use <b>#tags</b> by adding a <b>#</b> before a keyword</li><li>To mention a user, use his <b>@username</b></li><li>To write rich content, you can use the <a href='http://en.wikipedia.org/wiki/Markdown' target='_blank'>MarkDown</a> syntax, for example *text* to have a text in <i>italic</i> or **text** to have a text in <b>bold</b>.</li><li>If you write a link like http://www.ippon.fr, it will be automatically clickable</li><li>If you add a link to YouTube, Dailymotion or Vimeo, the online video will be automatically displayed</li><li>If you add a link to a <a href='https://gist.github.com/' target='_blank'>Gist</a>, its source code will be automatically displayed</li></ul>
 tatami.timeline=Timeline
 
-tatami.user.picture=Picture
-tatami.user.picture.legend=To update your picture, go to
+tatami.user.picture=Photo
 tatami.user.picture.button=Change your photo
 tatami.user.email=E-mail
 tatami.user.firstName=First name
@@ -188,7 +186,6 @@ tatami.user.status.confirm.delete=Are you sure you want to delete the status ?
 tatami.group.name=Group
 tatami.group.counter=Members
 tatami.group.add=Create a new group
-tatami.group.add.success=Group successfully created
 tatami.group.add.title=Name of the group
 tatami.group.add.description=Description
 tatami.group.add.access=Access
