--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -1,5 +1,4 @@
 tatami.copyright=Copyright 2012
-tatami.copyright=Copyright 2012
 tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Forker Tatami sur Github
 tatami.github.issues=Signaler un bug
@@ -7,7 +6,6 @@ tatami.ippon.website=Site Web d'Ippon Technologies
 tatami.ippon.blog=Blog d'Ippon Technologies
 tatami.ippon.twitter.follow=Suivre @ippontech sur Twitter
 tatami.title=Tatami
-tatami.logo=Ippon Technologies Logo
 tatami.profile=Profil
 tatami.home=Accueil
 tatami.menu.about=A Propos
@@ -98,7 +96,6 @@ tatami.status.help=<ul><li>Vous pouvez utiliser des <b>#tags</b> en ajoutant un 
 tatami.timeline=Actualité
 
 tatami.user.picture=Photo
-tatami.user.picture.legend=Pour mettre à jour votre photo, connectez-vous sur
 tatami.user.picture.button=Changer votre photo
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
@@ -106,10 +103,10 @@ tatami.user.lastName=Nom
 tatami.user.jobTitle=Fonction
 tatami.user.phoneNumber=Numéro de téléphone
 tatami.user.follow=Suivre
-tatami.user.followed=Suivi
+tatami.user.followed=Abonné
 tatami.user.follows.you=vous suit
 tatami.badge.status=Statuts
-tatami.badge.followed=Suivis
+tatami.badge.followed=Abonnements
 tatami.badge.followers=Abonnés
 tatami.user.undefined=Utilisateur inconnu.
 tatami.user.yourself=C'est vous !
@@ -189,7 +186,6 @@ tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le stat
 tatami.group.name=Groupe
 tatami.group.counter=Membres
 tatami.group.add=Créer un nouveau groupe
-tatami.group.add.success=Groupe créé avec succès
 tatami.group.add.title=Nom du groupe
 tatami.group.add.description=Description
 tatami.group.add.access=Accès
