--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -319,3 +319,4 @@ tatami.help.home.follow-suggest.content=<p>This is a list of users who share com
 
 tatami.help.home.profileTrends.title=<b>Trends</b>
 tatami.help.home.profileTrends.content=<p>This list represents the #hashtag that are currently the most often used on tatami. Use this to discover what's going on and what are the hottest topics on tatami !</p>
+tatami.tatam.publish=Publish
