--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -120,6 +120,8 @@ tatami.user.file.name=Filename
 tatami.user.file.size=Size
 tatami.user.file.creation.date=Date
 tatami.user.file.preview=Preview
+tatami.user.file.delete.success=Your file has been deleted
+tatami.user.file.delete.error=Failed to deleted your file
 
 tatami.menu.search=Search...
 tatami.menu.account=Account
