--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -120,8 +120,8 @@ tatami.user.file.name=Nom du fichier
 tatami.user.file.size=Taille
 tatami.user.file.creation.date=Date
 tatami.user.file.preview=Aperçu
-tatami.user.file.delete.success=Votre fichier à été supprimer
-tatami.user.file.delete.error=Votre fichier n'a pas été supprimer
+tatami.user.file.delete.success=Votre fichier a été supprimé
+tatami.user.file.delete.error=Votre fichier n'a pas été supprimé
 
 tatami.menu.search=Recherche...
 tatami.menu.account=Compte
