#415 Add "search" tab on User/Tag/Group management pages

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -18,6 +18,7 @@ tatami.menu.product=Get the software
 tatami.menu.license=Source code license
 tatami.search.placeholder=Search
 tatami.search.button=Search
+tatami.search.filter=Enter your search
 tatami.logout=Logout
 tatami.login=E-mail
 tatami.username=User name
