--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -18,6 +18,7 @@ tatami.menu.product=Téléchargez Tatami
 tatami.menu.license=Licence du code source
 tatami.search.placeholder=Rechercher
 tatami.search.button=Rechercher
+tatami.search.filter=Entrer votre recherche
 tatami.logout=Déconnexion
 tatami.login=E-mail
 tatami.username=Nom d'utilisateur
