Updated new messages text

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -14,7 +14,6 @@ tatami.menu.tos=Terms of service
 tatami.menu.language=Language
 tatami.menu.language.en=English
 tatami.menu.language.fr=Francais
-tatami.menu.product=Get the software
 tatami.menu.license=Source code license
 tatami.search.placeholder=Search
 tatami.search.button=Search
@@ -110,11 +109,8 @@ tatami.badge.status=Status
 tatami.badge.followed=Followed
 tatami.badge.followers=Followers
 tatami.user.undefined=User undefined.
-tatami.user.yourself=It's you !
-tatami.user.sendmessageto=Send a message to
 tatami.user.send=Send
 tatami.user.status=Status
-tatami.user.popular=Popular users
 tatami.user=User
 
 tatami.user.file.name=Filename
@@ -180,6 +176,8 @@ tatami.user.status.shared.by=Shared by
 tatami.user.profile.edit=Edit my profile
 
 tatami.timeline.refresh=Refresh
+tatami.timeline.message=New message
+tatami.timeline.messages=New messages
 tatami.timeline.next=More
 
 tatami.timeline.shares=Shared by
