--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -14,7 +14,6 @@ tatami.menu.tos=Conditions générales de vente
 tatami.menu.language=Langue
 tatami.menu.language.en=English
 tatami.menu.language.fr=Français
-tatami.menu.product=Téléchargez Tatami
 tatami.menu.license=Licence du code source
 tatami.search.placeholder=Rechercher
 tatami.search.button=Rechercher
@@ -110,11 +109,8 @@ tatami.badge.status=Statuts
 tatami.badge.followed=Abonnements
 tatami.badge.followers=Abonnés
 tatami.user.undefined=Utilisateur inconnu.
-tatami.user.yourself=C'est vous !
-tatami.user.sendmessageto=Envoyez un message à
 tatami.user.send=Envoi
 tatami.user.status=Statut
-tatami.user.popular=Utilisateurs populaires
 tatami.user=Utilisateurs
 
 tatami.user.file.name=Nom du fichier
@@ -180,6 +176,8 @@ tatami.user.status.shared.by=Partagé par
 tatami.user.profile.edit=Editer mon profil
 
 tatami.timeline.refresh=Rafraîchir
+tatami.timeline.message=Nouveau message
+tatami.timeline.messages=Nouveaux messages
 tatami.timeline.next=Plus
 
 tatami.timeline.shares=Partagé par
