--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -85,6 +85,8 @@ tatami.find.username=Username
 tatami.find.action=Find
 tatami.follow.suggestions=Who to follow?
 tatami.follow.nobody=No new user to follow today.
+tatami.statistics=Statistics
+tatami.user.informations=Informations
 tatami.trends.title=Trends
 tatami.trends.user.title=User trends
 
