--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -85,6 +85,8 @@ tatami.find.username=Identifiant utilisateur
 tatami.find.action=Chercher
 tatami.follow.suggestions=Qui suivre ?
 tatami.follow.nobody=Personne à suivre aujourd'hui.
+tatami.statistics=Statistiques
+tatami.user.informations=Informations
 tatami.trends.title=Tendances
 tatami.trends.user.title=Tendances pour l'utilisateur
 
