--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -91,7 +91,7 @@ tatami.trends.title=Tendances
 tatami.trends.user.title=Tendances pour l'utilisateur
 
 tatami.new.status=Nouveau
-tatami.status.characters.left=Caractères restant :
+tatami.status.characters.left=Caractères restants :
 tatami.status.update.success=Votre statut a été mis à jour !  
 tatami.status.help.title=Aide
 tatami.status.help=<ul><li>Vous pouvez utiliser des <b>#tags</b> en ajoutant un <b>#</b> devant un mot-clef</li><li>Pour mentionner un utilisateur, utilisez son <b>@nom_utilisateur</b></li><li>Pour enrichir votre texte, vous pouvez utiliser la syntaxe <a href='http://fr.wikipedia.org/wiki/Markdown' target='_blank'>MarkDown</a>, par exemple *texte* pour écrire en <i>italique</i> ou **texte** pour écrire en <b>gras</b>.</li><li>Si vous écrivez un lien de type http://www.ippon.fr, il sera automatiquement cliquable</li><li>Si vous ajoutez un lien provenant de YouTube, Dailymotion ou Vimeo, la vidéo en ligne sera automatiquement insérée</li><li>Si vous ajoutez un lien pointant vers un <a href='https://gist.github.com/' target='_blank'>Gist</a>, le code source sera automatiquement affiché</li></ul>
