Recherche fulltext nouvelle version

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -322,3 +322,5 @@ tatami.help.home.profileTrends.title=<b>Trends</b>
 tatami.help.home.profileTrends.content=<p>This list represents the #hashtag that are currently the most often used on tatami. Use this to discover what's going on and what are the hottest topics on tatami !</p>
 tatami.tatam.publish=Publish
 tatami.status.options=Options
+
+tatami.search.result.title=Results for
