--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -322,3 +322,5 @@ tatami.help.home.profileTrends.title=<b>Tendances</b>
 tatami.help.home.profileTrends.content=<p>Cette liste représente les #hashtag les plus utilisés ces derniers jours sur tatami. Utilisez la pour découvrir les dernières tendances et les sujets que vous ne connaissez pas !</p>
 tatami.tatam.publish=Publier
 tatami.status.options=Options
+
+tatami.search.result.title=Résultats pour
