Finished adding new status types

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -173,8 +173,12 @@ tatami.user.status.share=Partager
 tatami.user.status.share.success=Status partagé !
 tatami.user.status.favorite=Favori
 tatami.user.status.delete=Supprimer
+tatami.user.status.announce=Annoncer
 tatami.user.status.replyto=En réponse à
 tatami.user.status.shared.by=Partagé par
+tatami.user.status.announced.by=Annoncé par
+tatami.user.shared.you=a partagé votre status
+tatami.user.followed.you=vous a suivi
 tatami.user.profile.edit=Editer mon profil
 
 tatami.timeline.refresh=Rafraîchir
@@ -184,7 +188,8 @@ tatami.timeline.next=Plus
 
 tatami.timeline.shares=Partagé par
 
-tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le status ?
+tatami.user.status.confirm.announce=Etes-vous certain de vouloir envoyer ce status à tout le monde ?
+tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer ce status ?
 
 tatami.group.name=Groupe
 tatami.group.counter=Membres
