--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -173,8 +173,12 @@ tatami.user.status.share=Share
 tatami.user.status.share.success=Status successfully shared!
 tatami.user.status.favorite=Favorite
 tatami.user.status.delete=Delete
+tatami.user.status.announce=Announce
 tatami.user.status.replyto=In reply to
 tatami.user.status.shared.by=Shared by
+tatami.user.status.announced.by=Announced by
+tatami.user.shared.you=has shared your status
+tatami.user.followed.you=has followed you
 tatami.user.profile.edit=Edit my profile
 
 tatami.timeline.refresh=Refresh
@@ -184,7 +188,8 @@ tatami.timeline.next=More
 
 tatami.timeline.shares=Shared by
 
-tatami.user.status.confirm.delete=Are you sure you want to delete the status ?
+tatami.user.status.confirm.announce=Are you sure you want to send this status to everyone ?
+tatami.user.status.confirm.delete=Are you sure you want to delete this status ?
 
 tatami.group.name=Group
 tatami.group.counter=Members
