--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -60,7 +60,7 @@ tatami.authentication.google.desc.2=Whether or not you already have a Tatami acc
 tatami.authentication.google.desc.3=Your email will be asked to Google and your domain name will be used to make you join the corresponding private space.
 tatami.authentication.google.submit=Authentication with Google Apps
 tatami.authentication.cgv=Terms of Service
-tatami.remember.password.time=Automatic connection (30 days)
+tatami.remember.password.time=Remember me
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=Source Code License
