--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -60,7 +60,7 @@ tatami.authentication.google.desc.2=Que vous ayez déjà un compte Tatami ou non
 tatami.authentication.google.desc.3=Votre email sera demandé à Google et votre nom de domaine sera utilisé pour vous faire rejoindre l'espace privé correspondant.
 tatami.authentication.google.submit=Connection avec Google Apps
 tatami.authentication.cgv=Conditions générales de vente
-tatami.remember.password.time=Connexion automatique (30 jours)
+tatami.remember.password.time=Se souvenir de moi
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=Licence du code source
