--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -324,7 +324,7 @@ tatami.help.home.follow-suggest.content=<p>Cette liste vous propose des utilisat
   <p>Et surtout, n'oubliez pas de poster des messages et d'utiliser des #hashtags, cela permet à tatami de vous proposer plus rapidement des utilisateurs à suivre !</p>
 
 tatami.help.home.profileTrends.title=<b>Tendances</b>
-tatami.help.home.profileTrends.content=<p>Cette liste représente les #hashtag les plus utilisés ces derniers jours sur tatami. Utilisez la pour découvrir les dernières tendances et les sujets que vous ne connaissez pas !</p>
+tatami.help.home.profileTrends.content=<p>Cette liste représente les #hashtag les plus utilisés ces derniers jours sur tatami. Utilisez-la pour découvrir les dernières tendances et les sujets que vous ne connaissez pas !</p>
 tatami.tatam.publish=Publier
 tatami.status.options=Options
 
