reworked welcome system for new users

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -275,17 +275,9 @@ tatami.rss.timeline.description=Actualité Tatami de {0}
 tatami.preferences.notifications.rss.timeline.link=Lien vers le flux RSS de votre actualité
 tatami.logo=Ippon Technologies Logo
 
-tatami.welcome.profile.header.title=Bienvenu dans votre communauté Tatami
-tatami.welcome.profile.header.description=Veuillez suivre les étapes suivantes afin de configurer votre compte.
-tatami.welcome.profile.error=Impossible de se connecter au serveur.
-tatami.welcome.tags.header.title=Suivez les sujet qui vous interessent.
-tatami.welcome.tags.header.description=Veuillez cliquer sur les tags que vous voulez suivre.
-tatami.welcome.friends.header.title=Invitez ou connectez vous à vos collègues.
-tatami.welcome.friends.header.description=Veuillez entrer les adresses professionelles des personnes avec qui vous voulez partager l'expérience Tatami en les séparant grâce à des virgules.
-tatami.welcome.friends.body.emails=Adresses e-mails
-tatami.welcome.friends.error.400=Le domaine n'est pas autorisé.
-tatami.welcome.friends.error.404=Aucune valeur valable.
-tatami.welcome.friends.error.unknown=Une error s'est produite.
+tatami.welcome.title=Bienvenue sur Tatami
+tatami.welcome.description=Votre actualité est vide ! Avez-vous besoin d'aide pour apprendre à utiliser Tatami ? Si oui, cliquez sur le bouton pour lancer la présentation.
+tatami.welcome.launch=Lancer la présentation
 
 tatami.help=Aide
 tatami.help.end=Terminer
