--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -275,17 +275,9 @@ tatami.rss.timeline.description=Tatami timeline for user {0}
 tatami.preferences.notifications.rss.timeline.link=Link to your timeline RSS stream
 tatami.logo=Ippon Technologies Logo
 
-tatami.welcome.profile.header.title=Welcome to your Tatami community
-tatami.welcome.profile.header.description=Please follow the next steps to setup your account
-tatami.welcome.profile.error=Cannot connect to the server.
-tatami.welcome.tags.header.title=Follow subjects that matters to you
-tatami.welcome.tags.header.description=Please select the tags you would like to follow
-tatami.welcome.friends.header.title=Invite or connect to your colleagues
-tatami.welcome.friends.header.description=Please enter the email addresses of people you want to share your Tatami's experience with and separete them by a comma.
-tatami.welcome.friends.body.emails=Email addresses
-tatami.welcome.friends.error.400=This domain is forbidden.
-tatami.welcome.friends.error.404=No valid value.
-tatami.welcome.friends.error.unknown=An error has occurred.
+tatami.welcome.title=Welcome to Tatami
+tatami.welcome.description=Your timeline is empty! Do you need help to learn how to use Tatami? Please click on the button below to launch a presentation.
+tatami.welcome.launch=Launch presentation
 
 tatami.help=Help
 tatami.help.end=End
