corrected photo upload

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -98,7 +98,7 @@ tatami.status.help=<ul><li>You can use <b>#tags</b> by adding a <b>#</b> before 
 tatami.timeline=Timeline
 
 tatami.user.picture=Photo
-tatami.user.picture.button=Change your photo
+tatami.user.picture.button=Drop your photo here to update it
 tatami.user.email=E-mail
 tatami.user.firstName=First name
 tatami.user.lastName=Last name
