--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -98,7 +98,7 @@ tatami.status.help=<ul><li>Vous pouvez utiliser des <b>#tags</b> en ajoutant un 
 tatami.timeline=Actualité
 
 tatami.user.picture=Photo
-tatami.user.picture.button=Changer votre photo
+tatami.user.picture.button=Déposez votre photo dans le cadre pour la mettre à jour
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
