Modification de la position des boutons

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -185,6 +185,8 @@ tatami.timeline.messages=New messages
 tatami.timeline.next=More
 
 tatami.timeline.shares=Shared by
+tatami.timeline.confirm.share=Are you sure you want to shared this status ?
+tatami.timeline.confirm.delete=Are you sure you want to delete the share ?
 
 tatami.user.status.confirm.announce=Are you sure you want to send this status to everyone ?
 tatami.user.status.confirm.delete=Are you sure you want to delete this status ?
