--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -185,6 +185,8 @@ tatami.timeline.messages=Nouveaux messages
 tatami.timeline.next=Plus
 
 tatami.timeline.shares=Partagé par
+tatami.timeline.confirm.share=Etes-vous certain de vouloir partager ce status ?
+tatami.timeline.confirm.delete=Etes-vous certain de vouloir supprimer ce partage ?
 
 tatami.user.status.confirm.announce=Etes-vous certain de vouloir envoyer ce status à tout le monde ?
 tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer ce status ?
