us reseaux sociaux

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -104,6 +104,14 @@ tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
 tatami.user.jobTitle=Fonction
 tatami.user.phoneNumber=Numéro de téléphone
+tatami.user.socialNetworks=Réseaux sociaux
+tatami.user.facebook=Url du profil Facebook
+tatami.user.linkedIn=Url du profil LinkedIn
+tatami.user.viadeo=Url du profil Viadeo
+tatami.user.skype=Url du profil Skype
+tatami.user.twitter=Url du profil Twitter
+tatami.user.googlePlus=Url du profil Google+
+tatami.user.hireDate=Date d'embauche
 tatami.user.follow=Suivre
 tatami.user.followed=Abonné
 tatami.user.follows.you=vous suit
