--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -178,6 +178,7 @@ tatami.user.status.announced.by=Annoncé par
 tatami.user.shared.you=a partagé votre status
 tatami.user.followed.you=vous a suivi
 tatami.user.profile.edit=Editer mon profil
+tatami.user.search.searchInStatus=Statuts contenant
 
 tatami.timeline.refresh=Rafraîchir
 tatami.timeline.message=Nouveau message
