Marionette Correction orthographe + suppression des en-têtes

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -178,7 +178,7 @@ tatami.user.status.announced.by=Announced by
 tatami.user.shared.you=has shared your status
 tatami.user.followed.you=has followed you
 tatami.user.profile.edit=Edit my profile
-tatami.user.search.searchInStatus=Statuts with
+tatami.user.search.searchInStatus=Status with
 
 tatami.timeline.refresh=Refresh
 tatami.timeline.message=New message
