Phrase indiquant que quelqu'un nous suit lorsque l'on va sur son profil

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -164,6 +164,7 @@ tatami.preferences.notifications.rss.timeline=Allow RSS feed publication of your
 tatami.preferences.success=Your preferences have been saved
 
 tatami.user.profile.show=Show profile of
+tatami.user.profile.yourProfil=Your profile
 tatami.user.status.show=View
 tatami.user.status.details=Details
 tatami.user.status.reply=Reply
