--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -164,6 +164,7 @@ tatami.preferences.notifications.rss.timeline=Autoriser la publication d'un flux
 tatami.preferences.success=Vos préférences ont été sauvegardées
 
 tatami.user.profile.show=Profil de
+tatami.user.profile.yourProfil=Votre profil
 tatami.user.status.show=Voir
 tatami.user.status.details=Détails
 tatami.user.status.reply=Répondre
