Work in progress : demander à rejoindre un groupe

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -191,6 +191,8 @@ tatami.timeline.shares=Partagé par
 tatami.user.status.confirm.announce=Etes-vous certain de vouloir envoyer ce status à tout le monde ?
 tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer ce status ?
 
+tatami.group.join=Demander à rejoindre
+tatami.group.leave=Quitter
 tatami.group.name=Groupe
 tatami.group.counter=Membres
 tatami.group.add=Créer un nouveau groupe
@@ -223,6 +225,7 @@ tatami.group.edit.member.delete=Enlever
 tatami.group.role=Role
 tatami.group.role.admin=Administrateur
 tatami.group.role.member=Membre
+tatami.group.role.pending=Membre en attente
 tatami.group.select=Sélectionnez un groupe dans le menu "Groupes" à gauche
 tatami.group.members.list=Liste des membres
 
