removed useless Javadoc. added EN properties

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -182,8 +182,8 @@ tatami.user.profile.edit=Editer mon profil
 tatami.user.search.searchInStatus=Statuts contenant
 tatami.user.activate=Activer
 tatami.user.desactivate=Désactiver
-tatami.user.desactivate.msg=Cet utilisateur est desactivé
-tatami.user.desactivate.msg2= ( Utilisateur desactivé )
+tatami.user.desactivate.msg=Cet utilisateur est désactivé
+tatami.user.desactivate.msg2= ( Utilisateur désactivé )
 
 tatami.timeline.refresh=Rafraîchir
 tatami.timeline.message=Nouveau message
