IE Compatible: file upload mode IE8

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -100,6 +100,9 @@ tatami.timeline=Actualité
 
 tatami.user.picture=Photo
 tatami.user.picture.button=Déposez votre photo dans le cadre pour la mettre à jour
+tatami.user.picture.buttonIE=Sélectionnez une photo pour mettre à jour votre profil.
+tatami.user.picture.buttonIE-ok=Photo mise à jour correctement, rechargez la page pour previsualisation.
+tatami.user.picture.buttonIE-ko=Une erreur s'est produite, essayez dans quelques minutes.
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
