IE Compatible: File Upload for Tatams

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -101,8 +101,8 @@ tatami.timeline=Actualité
 tatami.user.picture=Photo
 tatami.user.picture.button=Déposez votre photo dans le cadre pour la mettre à jour
 tatami.user.picture.buttonIE=Sélectionnez une photo pour mettre à jour votre profil.
-tatami.user.picture.buttonIE-ok=Photo mise à jour correctement, rechargez la page pour previsualisation.
-tatami.user.picture.buttonIE-ko=Une erreur s'est produite, essayez dans quelques minutes.
+tatami.user.picture.buttonIE-ok=Photo mise à jour correctement.
+tatami.user.upload.buttonIE-ko=Une erreur s'est produite, pensez à supprimer des anciens fichiers dans votre compte.
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
