--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -101,8 +101,8 @@ tatami.timeline=Timeline
 tatami.user.picture=Photo
 tatami.user.picture.button=Drop your photo here to update it
 tatami.user.picture.buttonIE=Select a photo to update your profile
-tatami.user.picture.buttonIE-ok=Photo updated, reload page for preview
-tatami.user.picture.buttonIE-ko=An error occurred, try again in a few minutes.
+tatami.user.picture.buttonIE-ok=Photo updated!
+tatami.user.upload.buttonIE-ko=An error occurred. Free some space in your account and try again.
 tatami.user.email=E-mail
 tatami.user.firstName=First name
 tatami.user.lastName=Last name
