IE Compatible: tatam upload file message

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -102,6 +102,7 @@ tatami.user.picture=Photo
 tatami.user.picture.button=Drop your photo here to update it
 tatami.user.picture.buttonIE=Select a photo to update your profile
 tatami.user.picture.buttonIE-ok=Photo updated!
+tatami.user.upload.buttonIE-ok=Select files to attach to your Tatam.
 tatami.user.upload.buttonIE-ko=An error occurred. Free some space in your account and try again.
 tatami.user.email=E-mail
 tatami.user.firstName=First name
