--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -104,6 +104,7 @@ tatami.user.picture.buttonIE=Select a photo to update your profile
 tatami.user.picture.buttonIE-ok=Photo updated!
 tatami.user.upload.buttonIE-ok=Select files to attach to your Tatam.
 tatami.user.upload.buttonIE-ko=An error occurred. Free some space in your account and try again.
+tatami.user.upload.choose=Choose a file
 tatami.user.email=E-mail
 tatami.user.firstName=First name
 tatami.user.lastName=Last name
@@ -328,3 +329,4 @@ tatami.help.home.profileTrends.title=<b>Trends</b>
 tatami.help.home.profileTrends.content=<p>This list represents the #hashtag that are currently the most often used on tatami. Use this to discover what's going on and what are the hottest topics on tatami !</p>
 tatami.tatam.publish=Publish
 tatami.status.options=Options
+tatami.tatam.mandatory=Comment is mandatory
