--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -104,6 +104,7 @@ tatami.user.picture.buttonIE=Sélectionnez une photo pour mettre à jour votre p
 tatami.user.picture.buttonIE-ok=Photo mise à jour correctement.
 tatami.user.upload.buttonIE-ok=Sélectionnez des fichiers à ajouter à votre Tatam.
 tatami.user.upload.buttonIE-ko=Une erreur s'est produite, pensez à supprimer des anciens fichiers dans votre compte.
+tatami.user.upload.choose=Choisir un fichier
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
@@ -328,4 +329,4 @@ tatami.help.home.profileTrends.title=<b>Tendances</b>
 tatami.help.home.profileTrends.content=<p>Cette liste représente les #hashtag les plus utilisés ces derniers jours sur tatami. Utilisez-la pour découvrir les dernières tendances et les sujets que vous ne connaissez pas !</p>
 tatami.tatam.publish=Publier
 tatami.status.options=Options
-
+tatami.tatam.mandatory=Commentaire obligatoire
