Send button text in tatam edit changed from "Save" to "Send"

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -330,3 +330,4 @@ tatami.help.home.profileTrends.content=<p>This list represents the #hashtag that
 tatami.tatam.publish=Publish
 tatami.status.options=Options
 tatami.tatam.mandatory=Comment is mandatory
+tatami.tatam.send=Send
