--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -330,3 +330,4 @@ tatami.help.home.profileTrends.content=<p>Cette liste représente les #hashtag l
 tatami.tatam.publish=Publier
 tatami.status.options=Options
 tatami.tatam.mandatory=Commentaire obligatoire
+tatami.tatam.send=Envoyer
