IeCompatible: correct fileupload managing + controlling exceptions on attachments size and deleted attachments on server side

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -102,8 +102,8 @@ tatami.user.picture=Photo
 tatami.user.picture.button=Déposez votre photo dans le cadre pour la mettre à jour
 tatami.user.picture.buttonIE=Sélectionnez une photo pour mettre à jour votre profil.
 tatami.user.picture.buttonIE-ok=Photo mise à jour correctement.
-tatami.user.upload.buttonIE-ok=Sélectionnez des fichiers à ajouter à votre Tatam.
-tatami.user.upload.buttonIE-ko=Une erreur s'est produite, pensez à supprimer des anciens fichiers dans votre compte.
+tatami.user.upload.buttonIE=Sélectionnez des fichiers à ajouter à votre Tatam.
+tatami.user.upload.buttonIE-ko=Une erreur s'est produite! Espace insuffisant.
 tatami.user.upload.choose=Choisir un fichier
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
