--- a/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
+++ b/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
@@ -28,9 +28,9 @@ userPrivateMessage.text1=You have received a private message on Tatami from
 userPrivateMessage.text2=You can see this status on Tatami :
 userPrivateMessage.text3=Regards,
 
-userMention.title=You have been mentionned on Tatami
+userMention.title=You have been mentioned on Tatami
 userMention.greeting=Dear
-userMention.text1=You have been mentionned on Tatami :
+userMention.text1=You have been mentioned on Tatami :
 userMention.text2=You can see this status on Tatami :
 userMention.text3=Regards,
 
