Working on drag and drop file upload support

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -70,7 +70,7 @@ tatami.status.update=Update your status
 tatami.status.editor=Edit
 tatami.status.preview=Preview
 tatami.status.update.to=Send a status update
-tatami.status.private=Private message
+tatami.status.private=Private Message
 tatami.status.geoLocalization=Geolocalization
 tatami.status.update.drop.file=Drop your files here
 tatami.status.reply=Reply to this status
